bluec-tests/tests/invalid/types_bool/cast_type.c
int main(void) {
    _Bool b1 = (_Bool)int;
    return 0;
}